fix dropdown content alignment

--- a/app/css/modules/dropdown.css
+++ b/app/css/modules/dropdown.css
@@ -50,6 +50,7 @@ some text.
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     min-width: 100%;
+    text-align: left;
 }
 
 /* Links inside the dropdown */
